# NotificationService

./: CMakeLists.txt  GNotifier.cpp  GNotifier.h  INotificationRepository.h  INotifier.h  ISerializer.h  MessageReceiver.cpp  MessageReceiver.h  Note.cpp  Note.h  NotificationRepository.cpp  NotificationRepository.h  Serializer.cpp  Serializer.h  TimerService.cpp  TimerService.h  compile_commands.json  main.cpp  sender.cpp
utils/: SqlException.cpp  SqlException.h
